force-app/main/default/objects/Mapping__c/Mapping__c.object-meta.xml
<CustomObject>
    <label>Mapping</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>