force-app/main/default/objects/Mapping__c/fields/Sales_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Sales_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Mappings1</relationshipName>
    <type>Lookup</type>
</CustomField>